# Ritt-Wu

./: ChangeLog.md  README.md  Ritt-Wu.cabal  config.sp  flake.nix  package.yaml  stack.yaml
.stack-work/install/x86_64-linux/lts-13.16/8.6.4/pkgdb/: package.cache
.stack-work/intero/: intero11514320-TEMP.hs
.stack-work/odir/: Lib.hi
app/: Main.hs
bench/: Benchmarking.hs  Monomial.hs
nix/: shell.nix  sources.nix
nix/haskell/: default.nix  overlay.nix
src/: Lib.hs
src/Polynomial/: Exponent.hs  Monomial.hs  PolyFunctions.hs  Polynomial.hs  Prelude.hs  Terms.hs  Wu.hs
test/: Spec.hs
