cabal-version: 3.4

name:           Ritt-Wu
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/Ritt-Wu#readme>
homepage:       https://github.com/githubuser/Ritt-Wu#readme
bug-reports:    https://github.com/githubuser/Ritt-Wu/issues
author:         Jose Luis Seraquive Cuenca
maintainer:     example@example.com
copyright:      2019 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
                  README.md
                  ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/Ritt-Wu

library
  exposed-modules:
                  Polynomial.Monomial
                  Polynomial.Terms
                  Polynomial.Polynomial
                  Polynomial.Wu
  other-modules:
                  Paths_Ritt_Wu
  hs-source-dirs:
                  src
  build-depends:
                  base
                , algebra
                , criterion
                , deepseq
                , massiv
                , scheduler
                , sscript
  default-language: Haskell2010

executable Ritt-Wu-exe
  main-is: Main.hs
  other-modules:
      Paths_Ritt_Wu
  hs-source-dirs:
      app
  ghc-options:  -threaded -O2 -rtsopts -eventlog   -fprof-auto  "-with-rtsopts=-N -s -h -i0.1"
  build-depends:
                          Ritt-Wu
                , algebra
                , base
                , criterion
                , deepseq
                , massiv
                , scheduler
                , sscript
  default-language: Haskell2010

test-suite Ritt-Wu-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_Ritt_Wu
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts  -fprof-auto
  build-depends:
                  Ritt-Wu
                , base
                , deepseq
                , scheduler
                , tasty
                , tasty-hunit
                , tasty-quickcheck
                , tasty-smallcheck
  default-language: Haskell2010

benchmark Ritt-Wu-benchmark
 type: exitcode-stdio-1.0
 hs-source-dirs: bench
 main-is:             Benchmarking.hs
 other-modules:
      Paths_Ritt_Wu
 ghc-options:  -threaded -O2 "-with-rtsopts=-N -s "
 build-depends:
                         Ritt-Wu
               , algebra
               , base
               , criterion
               , deepseq
               , massiv
               , scheduler
               , sscript

 default-language: Haskell2010
